--- a/templates/docs/examples/patterns/grid/default.html
+++ b/templates/docs/examples/patterns/grid/default.html
@@ -31,7 +31,7 @@
       <span>.col-9</span>
     </div>
     <div class="col-3">
-      <span>.col-9</span>
+      <span>.col-3</span>
     </div>
   </div>
   <div class="row">
@@ -96,6 +96,89 @@
     </div>
     <div class="col-11">
       <span>.col-11</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+    <div class="col-1">
+      <span>.col-1</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-2">
+      <span>.col-2</span>
+    </div>
+    <div class="col-2">
+      <span>.col-2</span>
+    </div>
+    <div class="col-2">
+      <span>.col-2</span>
+    </div>
+    <div class="col-2">
+      <span>.col-2</span>
+    </div>
+    <div class="col-2">
+      <span>.col-2</span>
+    </div>
+    <div class="col-2">
+      <span>.col-2</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-3">
+      <span>.col-3</span>
+    </div>
+    <div class="col-3">
+      <span>.col-3</span>
+    </div>
+    <div class="col-3">
+      <span>.col-3</span>
+    </div>
+    <div class="col-3">
+      <span>.col-3</span>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-4">
+      <span>.col-4</span>
+    </div>
+    <div class="col-4">
+      <span>.col-4</span>
+    </div>
+    <div class="col-4">
+      <span>.col-4</span>
     </div>
   </div>
 </div>
