Add menu toggle component with a side navigation example

--- a/templates/docs/examples/patterns/side-navigation/_default.html
+++ b/templates/docs/examples/patterns/side-navigation/_default.html
@@ -1,4 +1,4 @@
-<div class="p-side-navigation">
+<div class="p-side-navigation" id="side-navigation">
   <ul class="p-side-navigation__list">
     <li class="p-side-navigation__item--title">
       <a class="p-side-navigation__link" href="#">Title that is a link</a>
