--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -25,6 +25,7 @@
 @import 'patterns_lists';
 @import 'patterns_matrix';
 @import 'patterns_media-object';
+@import 'patterns_menu-toggle';
 @import 'patterns_modal';
 @import 'patterns_muted-heading';
 @import 'patterns_navigation';
@@ -97,6 +98,7 @@
   @include vf-p-lists;
   @include vf-p-matrix;
   @include vf-p-media-object;
+  @include vf-p-menu-toggle;
   @include vf-p-modal;
   @include vf-p-muted-heading;
   @include vf-p-navigation;
