--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -86,7 +86,7 @@
       .#{$grid-large-col-prefix}#{$i} {
         // on large screens provide flex box column implementation for IE
         // on smaller screens let them display full width one under another
-        @include vf-grid-flex-column;
+        @include vf-grid-flex-column($i);
         @include vf-grid-column($i);
       }
     }
