Fix standalone menu toggle example

--- a/scss/standalone/patterns_side-navigation.scss
+++ b/scss/standalone/patterns_side-navigation.scss
@@ -12,5 +12,18 @@
 @import '../patterns_grid';
 @include vf-p-grid;
 
+// notification used in menu toggle example
+@import '../patterns_notifications';
+@include vf-p-notification;
+
+// show/hide utilities used in mobile toggle example
+@import '../utilities_hide';
+@include vf-u-hide;
+@import '../utilities_show';
+@include vf-u-show;
+
+@import '../patterns_menu-toggle';
+@include vf-p-menu-toggle;
+
 @import '../patterns_side-navigation';
 @include vf-p-side-navigation;
