--- a/templates/docs/examples/patterns/side-navigation/toggle.html
+++ b/templates/docs/examples/patterns/side-navigation/toggle.html
@@ -4,6 +4,10 @@
 {% block standalone_css %}patterns_side-navigation{% endblock %}
 
 {% block content %}
+<div class="p-notification--caution u-hide--small">
+  <p class="p-notification__response">Resize the example to show menu toggle for small screens</p>
+</div>
+
 <div class="p-menu-toggle u-show--small u-hide">
   <button class="p-menu-toggle__button" aria-expanded="true" aria-controls="side-navigation" data-hide-class="u-hide--small">
     <i class="p-icon--menu p-menu-toggle__button--show"></i>
