Add side navigation dark theme support

--- a/templates/docs/examples/patterns/side-navigation/_default.html
+++ b/templates/docs/examples/patterns/side-navigation/_default.html
@@ -1,4 +1,4 @@
-<div class="p-side-navigation">
+<div class="p-side-navigation {% if is_dark %}is-dark{% endif %}">
   <ul class="p-side-navigation__list">
     <li class="p-side-navigation__item--title">
       <a class="p-side-navigation__link" href="#">Title that is a link</a>
