--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -96,7 +96,14 @@
   }
 
   // default light theme
-  @include vf-side-navigation-theme;
+  .p-side-navigation,
+  .p-side-navigation--icons {
+    @include vf-side-navigation-theme-light;
+
+    &.is-dark {
+      @include vf-side-navigation-theme-dark;
+    }
+  }
 }
 
 // helper
@@ -127,18 +134,17 @@
 // theme
 @mixin vf-side-navigation-theme(
   // default text color in sidebar
-    $color-sidenav-text-default: $colors--light-theme--text-muted,
+    $color-sidenav-text-default,
   // text color of highlighted items
-    $color-sidenav-text-active: $colors--light-theme--text-default,
+    $color-sidenav-text-active,
   // background color of active/hovered items
-    $color-sidenav-item-background-highlight: $colors--light-theme--background-highlighted,
+    $color-sidenav-item-background-highlight,
   // border color of active item
-    $color-sidenav-item-border-highlight: $color-brand,
+    $color-sidenav-item-border-highlight,
   // border color of items list
-    $color-sidenav-list-border: $colors--light-theme--border-default
+    $color-sidenav-list-border
 ) {
-  .p-side-navigation,
-  .p-side-navigation--icons {
+  & {
     color: $color-sidenav-text-default;
   }
 
@@ -162,4 +168,24 @@
       @include vf-highlight-bar($color-sidenav-item-border-highlight, left);
     }
   }
+}
+
+@mixin vf-side-navigation-theme-light {
+  @include vf-side-navigation-theme(
+    $color-sidenav-text-default: $colors--light-theme--text-muted,
+    $color-sidenav-text-active: $colors--light-theme--text-default,
+    $color-sidenav-item-background-highlight: $colors--light-theme--background-highlighted,
+    $color-sidenav-item-border-highlight: $color-brand,
+    $color-sidenav-list-border: $colors--light-theme--border-default
+  );
+}
+
+@mixin vf-side-navigation-theme-dark {
+  @include vf-side-navigation-theme(
+    $color-sidenav-text-default: rgba($colors--dark-theme--text-default, 0.55),
+    $color-sidenav-text-active: $colors--dark-theme--text-default,
+    $color-sidenav-item-background-highlight: rgba($colors--dark-theme--text-default, 0.05),
+    $color-sidenav-item-border-highlight: $colors--dark-theme--text-default,
+    $color-sidenav-list-border: rgba($colors--dark-theme--text-default, 0.05)
+  );
 }
