--- a/scss/_settings_themes.scss
+++ b/scss/_settings_themes.scss
@@ -1,5 +1,6 @@
 $theme-default-forms: 'light' !default;
 $theme-default-hr: 'light' !default;
 $theme-default-nav: 'light' !default;
+$theme-default-p-side-navigation: 'light' !default;
 $theme-default-p-search-box: 'light' !default;
 $theme-default-p-contextual-menu: 'light' !default;
