Consistently use theme colors in side navigation component

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -185,18 +185,18 @@
   @include vf-side-navigation-theme(
     $color-sidenav-text-default: $colors--light-theme--text-muted,
     $color-sidenav-text-active: $colors--light-theme--text-default,
-    $color-sidenav-item-background-highlight: $colors--light-theme--background-alt,
-    $color-sidenav-item-border-highlight: $color-brand,
+    $color-sidenav-item-background-highlight: $colors--light-theme--background-highlight,
+    $color-sidenav-item-border-highlight: $colors--light-theme--text-default,
     $color-sidenav-list-border: $colors--light-theme--border-default
   );
 }
 
 @mixin vf-side-navigation-theme-dark {
   @include vf-side-navigation-theme(
-    $color-sidenav-text-default: rgba($colors--dark-theme--text-default, 0.55),
+    $color-sidenav-text-default: $colors--dark-theme--text-muted,
     $color-sidenav-text-active: $colors--dark-theme--text-default,
-    $color-sidenav-item-background-highlight: rgba($colors--dark-theme--text-default, 0.05),
+    $color-sidenav-item-background-highlight: $colors--dark-theme--background-highlight,
     $color-sidenav-item-border-highlight: $colors--dark-theme--text-default,
-    $color-sidenav-list-border: rgba($colors--dark-theme--text-default, 0.05)
+    $color-sidenav-list-border: $colors--dark-theme--border-default
   );
 }
