Add some spacing to hr examples to make line visible on the background

--- a/templates/docs/examples/base/hr-dark.html
+++ b/templates/docs/examples/base/hr-dark.html
@@ -4,5 +4,12 @@
 {% block standalone_css %}base{% endblock %}
 
 {% block content %}
+<style>
+  body {
+    background: #111;
+    padding: 1rem 0;
+  }
+</style>
+
 <hr class="is-dark">
 {% endblock %}
