--- a/templates/docs/examples/base/hr.html
+++ b/templates/docs/examples/base/hr.html
@@ -4,5 +4,11 @@
 {% block standalone_css %}base{% endblock %}
 
 {% block content %}
+<style>
+  body {
+    padding: 1rem 0;
+  }
+</style>
+
 <hr>
 {% endblock %}
