Fix selector to match all buttons with modifiers

--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -135,7 +135,7 @@
 }
 
 @mixin vf-button-inline {
-  [class~='p-button'].is-inline {
+  [class*='p-button'].is-inline {
     @media (min-width: $breakpoint-medium) {
       margin-left: $sph-outer;
       width: auto;
