Update listing of latest blog posts on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,6 +132,10 @@
   </div>
   <div class="row">
     <div class="col-3">
+      <h4><a href="https://ubuntu.com/blog/automating-our-vanilla-releases-with-github-actions">Automating our Vanilla releases with GitHub actions</a></h4>
+      <p class="p-heading--6">31 March 2020</p>
+    </div>
+    <div class="col-3">
       <h4><a href="https://ubuntu.com/blog/the-lifecycle-of-components-in-your-design-system">The lifecycle of a component</a></h4>
       <p class="p-heading--6">21 November 2019</p>
     </div>
@@ -142,10 +146,6 @@
     <div class="col-3">
       <h4><a href="https://ubuntu.com/blog/new-release-vanilla-framework-2-0">New release: Vanilla framework 2.0</a></h4>
       <p class="p-heading--6">13 June 2019</p>
-    </div>
-    <div class="col-3">
-      <h4><a href="https://ubuntu.com/blog/a-fresh-look-for-releases-ubuntu-com">A fresh look for releases.ubuntu.com</a></h4>
-      <p class="p-heading--6">13 February 2019</p>
     </div>
   </div>
   <div class="u-fixed-width"><a href="https://ubuntu.com/blog/topics/design" class="p-button--neutral">View more from our blog</a></div>
