Add documentation layout example

--- a/templates/docs/examples/index.html
+++ b/templates/docs/examples/index.html
@@ -51,6 +51,16 @@
       </nav>
     </div>
     <div class="col-3">
+      <h3>Layouts</h3>
+      <nav>
+        <ul class="p-list">
+          {% for example in examples.layouts %}
+            <li class="p-list__item">
+              <a href="/docs/examples/{{ example.path }}" class="p-link">{{ example.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
       <h3>Templates</h3>
       <nav>
         <ul class="p-list">
