Quick'n'dirty docs layout demo

--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -66,6 +66,8 @@
 @import 'utilities_vertically-center';
 @import 'utilities_no-print';
 
+@import 'layouts_docs';
+
 // Include all the CSS
 @mixin vanilla {
   @include vf-base;
@@ -136,4 +138,6 @@
   @include vf-u-vertically-center;
   @include vf-u-visualise-baseline;
   @include vf-u-no-print;
+
+  @include vf-l-docs;
 }
