--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -32,6 +32,7 @@
 @import 'patterns_notifications';
 @import 'patterns_pagination';
 @import 'patterns_pull-quotes';
+@import 'patterns_row-with-aside';
 @import 'patterns_search-box';
 @import 'patterns_side-navigation';
 @import 'patterns_slider';
@@ -104,6 +105,7 @@
   @include vf-p-notification;
   @include vf-p-pagination;
   @include vf-p-pull-quotes;
+  @include vf-p-row-with-aside;
   @include vf-p-search-box;
   @include vf-p-side-navigation;
   @include vf-p-slider;
