Fix class attribute selectors

--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -144,7 +144,7 @@
 }
 
 @mixin vf-button-icon {
-  [class^='p-button'].has-icon {
+  [class*='p-button'].has-icon {
     width: auto;
 
     & [class*='p-icon'] {
