--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -72,66 +72,75 @@
   <div class="row">
     <aside class="col-3">
       <nav class="p-side-navigation">
-        <ul class="p-side-navigation__list">
-          <li class="p-side-navigation__item--title">
-            <a class="p-side-navigation__link">Machines</a>
-          </li>
-          <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link" href="#">Add machines</a>
-          </li>
-          <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link" href="#">Power management</a>
-          </li>
-          <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link" href="#">Commision machines</a>
-          </li>
-          <li class="p-side-navigation__item">
-            <span class="p-side-navigation__text is-selected">Testing</span>
-            <ul class="p-side-navigation__list">
-              <li class="p-side-navigation__item">
-                <a class="p-side-navigation__link" href="#">Hardware testing</a>
-              </li>
-              <li class="p-side-navigation__item ">
-                <a class="p-side-navigation__link is-active" href="#">Network testing</a>
-              </li>
-              <li class="p-side-navigation__item ">
-                <a class="p-side-navigation__link" href="#">Commissioning and hardware testing scripts</a>
-              </li>
-            </ul>
-          </li>
-          <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link" href="#">Deploy machines</a>
-          </li>
-          <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link" href="#">Tags</a>
-          </li>
-        </ul>
+        <div class="p-side-navigation__toggle">
+          <button class="p-button--base has-icon js-toggle"><i class="p-icon--contextual-menu" style="transform: rotate(-90deg)"></i><span>Toggle side navigation</span></button>
+        </div>
+        <div class="p-side-navigation__overlay"></div>
+        <div class="p-side-navigation__drawer">
+          <div class="p-side-navigation__toggle--bordered">
+            <button class="p-button--base has-icon js-toggle u-no-margin"><i class="p-icon--contextual-menu" style="transform: rotate(90deg)"></i><span>Toggle side navigation</span></button>
+          </div>
+          <ul class="p-side-navigation__list">
+            <li class="p-side-navigation__item--title">
+              <a class="p-side-navigation__link">Machines</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">Add machines</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">Power management</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">Commision machines</a>
+            </li>
+            <li class="p-side-navigation__item">
+              <span class="p-side-navigation__text is-selected">Testing</span>
+              <ul class="p-side-navigation__list">
+                <li class="p-side-navigation__item">
+                  <a class="p-side-navigation__link" href="#">Hardware testing</a>
+                </li>
+                <li class="p-side-navigation__item ">
+                  <a class="p-side-navigation__link is-active" href="#">Network testing</a>
+                </li>
+                <li class="p-side-navigation__item ">
+                  <a class="p-side-navigation__link" href="#">Commissioning and hardware testing scripts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">Deploy machines</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">Tags</a>
+            </li>
+          </ul>
 
-        <ul class="p-side-navigation__list">
-          <li class="p-side-navigation__item--title">
-            <a class="p-side-navigation__link">Troubleshoot</a>
-          </li>
-          <li class="p-side-navigation__item">
-            <a class="p-side-navigation__link" href="#">Getting help</a>
-          </li>
-          <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link" href="#">Non-snap MAAS installs</a>
-          </li>
-          <li class="p-side-navigation__item ">
-            <a class="p-side-navigation__link" href="#">MAAS 2.5 (and earlier) documentation</a>
-          </li>
-          <li class="p-side-navigation__item">
-            <a href="#" class="p-side-navigation__link is-selected">Upgrading MAAS</a>
-            <ul class="p-side-navigation__list">
-              <li class="p-side-navigation__item">
-                <a class="p-side-navigation__link" href="#">Upgrade from 2.3 to 2.4</a>
-              </li>
-              <li class="p-side-navigation__item ">
-                <a class="p-side-navigation__link" href="#">Upgrade from 1.9 to 2.x</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+          <ul class="p-side-navigation__list">
+            <li class="p-side-navigation__item--title">
+              <a class="p-side-navigation__link">Troubleshoot</a>
+            </li>
+            <li class="p-side-navigation__item">
+              <a class="p-side-navigation__link" href="#">Getting help</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">Non-snap MAAS installs</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">MAAS 2.5 (and earlier) documentation</a>
+            </li>
+            <li class="p-side-navigation__item">
+              <a href="#" class="p-side-navigation__link is-selected">Upgrading MAAS</a>
+              <ul class="p-side-navigation__list">
+                <li class="p-side-navigation__item">
+                  <a class="p-side-navigation__link" href="#">Upgrade from 2.3 to 2.4</a>
+                </li>
+                <li class="p-side-navigation__item ">
+                  <a class="p-side-navigation__link" href="#">Upgrade from 1.9 to 2.x</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </nav>
     </aside>
 
@@ -183,4 +192,29 @@
 <script>
   {% include "docs/examples/patterns/side-navigation/_script.js" %}
 </script>
+
+
+<script>
+  document.querySelectorAll(".js-toggle").forEach((button) => {
+    button.addEventListener("click", () => {
+      console.log("click");
+      // var top = document.querySelector(".p-side-navigation__drawer").getBoundingClientRect().top;
+      // document.documentElement.style.minHeight = "100%";
+      //
+      // var docHeight = document.documentElement.getBoundingClientRect().height;
+      // var sideBottom = document.querySelector(".p-side-navigation__drawer").getBoundingClientRect().bottom;
+
+      //var height = docHeight > sideBottom ? docHeight : sideBottom;
+
+      document.querySelector(".p-side-navigation__overlay").classList.toggle("is-expanded")
+      document.querySelector(".p-side-navigation__drawer").classList.toggle("is-expanded")
+      // document.querySelector(".p-side-navigation__drawer").style.minHeight = height - top + "px";
+      // document.querySelector(".p-side-navigation__overlay").style.minHeight = height - top + "px";
+    })
+  });
+</script>
+<style>
+  body { margin: 0 }
+</style>
+
 {% endblock %}
