--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -48,6 +48,7 @@ $states: (
 // --background           - default background color
 // --background-alt       - alternative version of background color, to be used to diffrenciate given surface
 // --background-highlight - background used on highlighted elements (for example selected elements in the navigation)
+// --background-overlay   - background used to overlay the screen when showing a modal type dialogs
 //
 // Border colors:
 // --border-default       - default border color
@@ -63,6 +64,7 @@ $colors--light-theme--text-muted: #666 !default;
 $colors--light-theme--background-default: #fff !default;
 $colors--light-theme--background-alt: #f7f7f7 !default;
 $colors--light-theme--background-highlight: #f7f7f7 !default;
+$colors--light-theme--background-overlay: transparentize($color-dark, 0.15) !default;
 
 $colors--light-theme--border-default: #cdcdcd !default;
 $colors--light-theme--border-high-contrast: #999 !default;
@@ -77,6 +79,7 @@ $colors--dark-theme--text-muted: rgba($colors--dark-theme--text-default, 0.55) !
 $colors--dark-theme--background-default: hsl(0, 0%, 15%) !default;
 $colors--dark-theme--background-alt: hsl(0, 0%, 20%) !default;
 $colors--dark-theme--background-highlight: rgba($colors--dark-theme--text-default, 0.05) !default;
+$colors--dark-theme--background-overlay: transparentize($color-dark, 0.15) !default;
 
 $colors--dark-theme--border-default: rgba($colors--dark-theme--text-default, 0.2) !default;
 $colors--dark-theme--border-high-contrast: rgba($colors--dark-theme--text-default, 0.4) !default;
