Update side navigation example scripts

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -63,6 +63,10 @@
       position: static;
       transform: translateX(0%);
     }
+
+    .p-side-navigation__overlay.is-expanded {
+      display: none;
+    }
   }
 
   // STYLING OF SIDE NAVIGATION LINKS LIST
