--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -51,7 +51,7 @@
     <aside class="col-3">
       <nav class="p-side-navigation">
 
-        <button class="p-side-navigation__toggle p-button--neutral has-icon js-drawer-toggle" aria-controls="drawer">
+        <button class="p-side-navigation__toggle -p-button--make-has-icon-work has-icon js-drawer-toggle" aria-controls="drawer">
           <i class="p-icon--contextual-menu" style="transform: rotate(-90deg)"></i>
           <span>Toggle side navigation</span>
         </button>
@@ -60,7 +60,7 @@
 
         <div class="p-side-navigation__drawer" id="drawer">
           <div class="p-side-navigation__drawer-header">
-            <button class="p-side-navigation__toggle--in-drawer p-button--base has-icon js-drawer-toggle" aria-controls="drawer">
+            <button class="p-side-navigation__toggle--in-drawer -p-button--make-has-icon-work has-icon js-drawer-toggle" aria-controls="drawer">
               <i class="p-icon--contextual-menu" style="transform: rotate(90deg)"></i>
               <span>Toggle side navigation</span>
             </button>
