Fix closing menu on overlay click

--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -51,15 +51,15 @@
     <aside class="col-3">
       <nav class="p-side-navigation">
 
-        <button class="p-side-navigation__toggle -p-button--make-has-icon-work has-icon js-drawer-toggle" aria-controls="drawer">
+        <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
           <span>Toggle side navigation</span>
         </button>
 
-        <div class="p-side-navigation__overlay js-drawer-toggle"></div>
+        <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
 
         <div class="p-side-navigation__drawer" id="drawer">
           <div class="p-side-navigation__drawer-header">
-            <button class="p-side-navigation__toggle--in-drawer -p-button--make-has-icon-work has-icon js-drawer-toggle" aria-controls="drawer">
+            <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
               <span>Toggle side navigation</span>
             </button>
           </div>
