Fix nudge on nested navigation lists

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -100,7 +100,8 @@
   // space for the right hand icon with default inner spacing on the left
   $sp-sidenav--icon-spacing-width: map-get($icon-sizes, default) + $sph-inner;
 
-  .p-side-navigation__list:first-of-type {
+  .p-side-navigation > .p-side-navigation__list:first-of-type,
+  .p-side-navigation__drawer > .p-side-navigation__list:first-of-type {
     // nudge from top to put text on baseline grid
     padding-top: 0.5 * $spv-inner--x-small;
   }
