--- a/templates/docs/examples/templates/maas-docs-grid.html
+++ b/templates/docs/examples/templates/maas-docs-grid.html
@@ -52,7 +52,7 @@
       <nav class="p-side-navigation">
 
         <button class="p-side-navigation__toggle js-drawer-toggle" aria-controls="drawer">
-          <span>Toggle side navigation</span>
+          Toggle side navigation
         </button>
 
         <div class="p-side-navigation__overlay js-drawer-toggle" aria-controls="drawer"></div>
@@ -60,7 +60,7 @@
         <div class="p-side-navigation__drawer" id="drawer">
           <div class="p-side-navigation__drawer-header">
             <button class="p-side-navigation__toggle--in-drawer js-drawer-toggle" aria-controls="drawer">
-              <span>Toggle side navigation</span>
+              Toggle side navigation
             </button>
           </div>
 
